Add poc get commande and get user from token
